fixed h1 width, removed accomodation section

--- a/source/js/module/contact/contact.html
+++ b/source/js/module/contact/contact.html
@@ -4,7 +4,7 @@
   @js:       ./source/js/module/contact/contact.js
 -->
 
-<div class="contact" id="contact">
+<div class="contact scrolling-bg" id="contact">
   	<div class="intro--container">
 		<h2>Contact</h2>
 		<p class="intro--container__content">
