--- a/source/js/module/home/home.html
+++ b/source/js/module/home/home.html
@@ -4,7 +4,7 @@
   @js:       ./source/js/module/home/home.js
 -->
 
-<div class="home" id="home">
+<div class="home scrolling-bg" id="home">
 	<div class="intro--container">
 		<h2>Welcome</h2>
 		<p class="intro--container__content">
@@ -32,6 +32,6 @@
 		<h2>CONTACT US</h2>
 		<p>Mas Aurelia</p>
 		<p class="email">jeanpayne@yahoo.com</p>
-		<p class="number">076338 564 945</p>
+		<p style="padding-top:5px;">Jean Payne</p>
 	</div>
 </div>
