--- a/source/js/module/info/info.html
+++ b/source/js/module/info/info.html
@@ -4,7 +4,7 @@
   @js:       ./source/js/module/info/info.js
 -->
 
-<div class="info" id="info">
+<div class="info scrolling-bg" id="info">
   	<div class="intro--container">
 		<h2>About</h2>
 		<p class="intro--container__content">
@@ -22,7 +22,7 @@
 
 	<div class="whiteStripe"></div>
 
-	<div class="accomodation">
+	<!-- <div class="accomodation">
 		<div class="intro--container">
 			<h2>Accomodation</h2>
 			<p class="intro--container__content">
@@ -30,7 +30,7 @@
 				Upstairs are 3 double bedrooms, 2 bathrooms (1 en suite) both with separate shower. Bedrooms 1 and 2 both have terraces with panoramic views of the Alpilles. The house has all mod cons - central heating, microwave, circotherm and conventional oven, gas hob, icemaker, washing machine and tumble-dryer.
 			</p>
 		</div>
-	</div>
+	</div> -->
 
 	<div class="whiteStripe"></div>
 
