--- a/source/js/module/gallery/gallery.html
+++ b/source/js/module/gallery/gallery.html
@@ -6,7 +6,7 @@
 
 
 
-<div class="gallery" id="gallery">
+<div class="gallery scrolling-bg" id="gallery">
   	<div class="intro--container">
 		<h2>Gallery</h2>
 		<p class="intro--container__content">
@@ -23,7 +23,7 @@
         {{/}}
     </div>
 
-    
+
 
     {{#lightBox}}
         <div class="background">
