Changed email addresss

--- a/source/js/module/home/home.html
+++ b/source/js/module/home/home.html
@@ -31,7 +31,7 @@
 		<div class="emailImg"></div>
 		<h2>CONTACT US</h2>
 		<p>Mas Aurelia</p>
-		<p class="email">jeanpayne@yahoo.com</p>
 		<p style="padding-top:5px;">Jean Payne</p>
+		<p class="email" style="padding-top:5px;">jeanmargaretpayne@yahoo.com</p>
 	</div>
 </div>
