--- a/source/js/module/contact/contact.html
+++ b/source/js/module/contact/contact.html
@@ -29,8 +29,8 @@
 			<div class="contactPanel--container__right">
 				<h3>Contact Info</h3>
 				<p>Mas Aurelia</p>
-				<p class="email">jeanpayne@yahoo.com</p>
-				<p class="number">076338 564 945</p>
+				<p class="email">jeanmargaretpayne@yahoo.com</p>
+				<!-- <p class="number">076338 564 945</p> -->
 			</div>
 		</div>
 	</div>
