--- a/source/js/module/info/info.html
+++ b/source/js/module/info/info.html
@@ -8,11 +8,11 @@
   	<div class="intro--container">
 		<h2>Accomodation</h2>
 		<p class="intro--container__content">
-            The Ground Floor comprises salon, entrance hall dining, study, kitchen fitted with cirotherm* and coventional ovens, gass, microwave, fridge and dishwasher, laundry room with washing machine, dryer, 2nd fridge, ice-maker, shower room with WC.<br><br>
+            The Ground Floor comprises of salon, entrance hall dining, study, kitchen fitted with circotherm and coventional ovens, gas, microwave, fridge and dishwasher, laundry room with washing machine, dryer, 2nd fridge, ice-maker and shower room with WC.<br><br>
 
-            The Frist Floor has 3 air-conditioned double berooms, 2 bathrooms (1 en suite) both with bath and separate shower, 2 WCs. Bedrooms 1 and 2, both of which have Queen sized beds, have terraces with panoramic vews of the Alpilles. Bedroom 3 is a twin bedded room. <br><br>
+            The frist floor has 3 air-conditioned double bedrooms, 2 bathrooms (1 en suite) both with bath and separate shower and 2 WCs. Bedrooms 1 and 2, both of which have Queen sized beds, have terraces with panoramic vews of the Alpilles. Bedroom 3 is a twin bed room. <br><br>
 
-            The salon, study and kitchen all have French doors opening onto a large terace for outdoor dining and garden with pool (10 x 5 metrs) and barbecue. The pool is functional from 1<sup>st</sup> May to 30<sup>th</sup> September
+            The salon, study and kitchen all have French doors opening onto a large terrace for outdoor dining and garden with a pool (10 x 5 metrs) and barbecue. The pool is functional from 1<sup>st</sup> May to 30<sup>th</sup> September.
         </p>
     </div>
 			<!-- Living accommodation is on 2 floors. The ground floor comprises a salon, study, superbly fitted kitchen, laundry room and shower room. The salon, study and kitchen all have French doors opening onto a large terrace and garden with pool and barbecue.
@@ -42,8 +42,8 @@
 		<h2>Amenities</h2>
         <p class="intro--container__content"></p>
 		<ul class="list list--amenities">
-			<li class="list-item list-item--amenities">TV with French channesl and English Frieeview programmes</li>
-			<li class="list-item list-item--amenities">CD, DVD, VCR plrayers</li>
+			<li class="list-item list-item--amenities">TV with French channels and English Freeview programmes</li>
+			<li class="list-item list-item--amenities">CD, DVD, VCR players</li>
 			<li class="list-item list-item--amenities">iPod docking station</li>
 			<li class="list-item list-item--amenities">Unlimited high speed internet</li>
 			<li class="list-item list-item--amenities">Telephone for local calls</li>
@@ -71,12 +71,12 @@
 		<h2>Staff and Services</h2>
         <p class="intro--container__content "></p>
 		<ul class="list list--amenities">
-			<li class="list-item list-item--staff">Manager and Gardian</li>
+			<li class="list-item list-item--staff">Manager and Gardien</li>
 			<li class="list-item list-item--staff">Cooking and cleaning by arrangement with manager</li>
 			<li class="list-item list-item--staff">Alarm system</li>
-			<li class="list-item list-item--staff">24hr support for emergencies provided by Manager + Gardian</li>
-			<li class="list-item list-item--staff">The Garidan looks after the pool and garden</li>
-			<li class="list-item list-item--staff">Three hours mid-week housekeeping is included in weely rentals</li>
+			<li class="list-item list-item--staff">24hr support for emergencies provided by Manager + Gardien</li>
+			<li class="list-item list-item--staff">The Gardien looks after the pool and garden</li>
+			<li class="list-item list-item--staff">Three hours mid-week housekeeping is included in weekly rentals</li>
 		</ul>
 
 	</div>
