--- a/source/js/module/localArea/localArea.html
+++ b/source/js/module/localArea/localArea.html
@@ -11,10 +11,10 @@
 			Eygalières is a small, quiet village perched on the summit of a small hill situated a few minutes from Saint Rémy de Provence. The village is surrounded by superb Alpilles landscapes, with olive groves, green valleys and vineyards punctuated here and there by tastefully restored residences. The houses cling together along the small winding streets and the main street takes you up to the village Church from where you can visit the chateau ruins as well as the old gatehouse and Saint-Laurent church.
 
             <br><br>
-            The village has a good selection of local shops (bakery, butcher, chemist, grocer, newsagent, hairdress) as well as serveral cafés and restaurants. There is a very popular weekly Provençal Friday market.
+            The village has a good selection of local shops (bakery, butcher, chemist, grocer, newsagent, hairdresser) as well as several cafés and restaurants. There is a very popular weekly Provençal Friday market.
 
             <br><br>
-            Eygaliéres is a great jumping off point to explore Provence. Nearby towns and viallage include St Remy-de-Provence, Avignon, Aix-en-Provence, Arles, Les Baux, Camargue, the Luberon, Gordes and Senaque Abbey with its lavender fields and about 50 minutes away.</p>
+            Eygaliéres is a great jumping off point to explore Provence. Nearby towns and village include St Remy-de-Provence, Avignon, Aix-en-Provence, Arles, Les Baux, Camargue, the Luberon, Gordes and Senaque Abbey with its lavender fields and about 50 minutes away.</p>
 	</div>
 
 	<div class="imagePanel">
@@ -37,7 +37,7 @@
     <div class="intro--container">
     <h2>Directions</h2>
     <p class="intro--container__content">The area is well served  with transport links.
-    <br><br><span>By Train:</span>  It is approximately 20km and 25mins drive from the TGV fast train station outside Avignon. The TGV operates direct to Avignon from London in the months and from Paris and Lille all year round.
+    <br><br><span>By Train:</span>  It is approximately 20km and 25mins drive from the TGV fast train station outside Avignon. The TGV operates direct to Avignon from London in the summer months and from Paris and Lille all year round.
     <br><br><span>By Air:</span>  It is apporximately 75kms and 55 mins drive from Marseille Provence airport. There are daily flights to Marseille from London by British Airways, Easyjet and Ryanair and by Air France from Paris. The smaller Avignon airport (20km and 20mins drive) is served by Flybe from Southampton and by Cityjet from London City airpot during the summer months.</p>
 
 </div>
