Website pushed live with map working, form working and image resized:

--- a/source/js/module/contact/contact.html
+++ b/source/js/module/contact/contact.html
@@ -17,7 +17,7 @@
 		<div class="contactPanel--container">
 			<div class="contactPanel--container__left">
 				<h3>General Enquiry</h3>
-				<form action="http://formspree.io/dominichacking@gmail.com" method="post">
+				<form action="http://formspree.io/jeanmargaretpayne@yahoo.com" method="post">
 					<input type="text" name="name" placeholder="Name" >
                     <input type="hidden" name="_next" value="http://masaurelia.com/contact" />
                     <input type="hidden" name="_subject" value="Mas Aurelia Request" />
