--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
 
     <title>Mas Aurelia - The Paynes</title>
 
-    <meta name="description" content="">
-    <meta name="keywords" content="" />
-    <meta name="author" content="" />
+    <meta name="description" content="Mas Aurelia is a lovely family house with stunning panoramic views over the Alpilles. Situated approximately 1km from the pretty hilltop village of Eygalières. Mas Aurelia provides a perfect get away where you can explore the provencal countryside and soak up the views and flavours of the local region">
+    <meta name="keywords" content="rental, provence, house to rent, family home, south of france, countryside home" />
+    <meta name="author" content="Dominic Hacking" />
     <meta name="robots" content = "all" />
     <meta name="robots" content = "index, follow" />
     <meta name="audience" content="all" />
