--- a/source/js/module/home/home.html
+++ b/source/js/module/home/home.html
@@ -8,7 +8,7 @@
 	<div class="intro--container">
 		<h2>Welcome</h2>
 		<p class="intro--container__content">
-			Mas Aurelia is a lovely family house with stunning panoramic views over the Alpilles. Situated approximately 1km from the pretty hilltop village of Eygalières and 8km from the main market town of Saint Ré­my de Provence. Mas Aurelia provides a perfect get away where you can explore the provencal countryside and soak up the views and flavours of the local region.
+			Mas Aurelia is a lovely family house with stunning panoramic views over the Alpilles. Situated approximately 1km from the pretty hilltop village of Eygalières and 8km from the main market town of Saint Ré­my de Provence. Mas Aurelia provides a perfect get away from where you can explore the provencal countryside and soak up the views and flavours of the local region.
 		</p>
 	</div>
 
