--- a/source/js/module/info/info.html
+++ b/source/js/module/info/info.html
@@ -10,7 +10,7 @@
 		<p class="intro--container__content">
             The Ground Floor is comprised of a salon, entrance hall dining, study, kitchen fitted with circotherm and coventional ovens, gas, microwave, fridge and dishwasher, laundry room with washing machine, dryer, 2nd fridge, ice-maker and shower room with WC.<br><br>
 
-            The first floor has 3 air-conditioned double bedrooms, 2 bathrooms (1 en suite) both with bath and separate shower and 2 WCs. Bedrooms 1 and 2, both of which have Queen sized beds, have terraces with panoramic vews of the Alpilles. Bedroom 3 is a twin bed room. <br><br>
+            The first floor has 3 air-conditioned double bedrooms, 2 bathrooms (1 en suite) both with bath and separate shower and WCs. Bedrooms 1 and 2, both of which have Queen sized beds, have terraces with panoramic vews of the Alpilles. Bedroom 3 is a twin bed room. <br><br>
 
             The salon, study and kitchen all have French doors opening onto a large terrace for outdoor dining and garden with a pool (10 x 5 metres) and barbecue. The pool is functional from 1<sup>st</sup> May to 30<sup>th</sup> September.
         </p>
