--- a/source/js/module/localArea/localArea.html
+++ b/source/js/module/localArea/localArea.html
@@ -14,7 +14,7 @@
             The village has a good selection of local shops (bakery, butcher, chemist, grocer, newsagent, hairdresser) as well as several cafés and restaurants. There is a very popular weekly Provençal Friday market.
 
             <br><br>
-            Eygaliéres is a great jumping off point to explore Provence. Nearby towns and village include St Remy-de-Provence, Avignon, Aix-en-Provence, Arles, Les Baux, Camargue, the Luberon, Gordes and Senaque Abbey with its lavender fields and is about 50 minutes away.</p>
+            Eygaliéres is a great jumping off point to explore Provence. Nearby towns and villages include St Remy-de-Provence, Avignon, Aix-en-Provence, Arles, Les Baux, Camargue, the Luberon, Gordes and Senaque Abbey with its lavender fields and is about 50 minutes away.</p>
 	</div>
 
 	<div class="imagePanel">
