--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
   <head>
     <meta charset="utf-8">
-
-    <title>Mas Aurelia - The Paynes</title>
+    <meta name="google-site-verification" content="l_vrCZnAXYBt7ajUPSrRQ_9fSjNKMc3ECvLj4TIzEAk" />
+    <title>Mas Aurelia - Eygalières</title>
 
     <meta name="description" content="Mas Aurelia is a lovely family house with stunning panoramic views over the Alpilles. Situated approximately 1km from the pretty hilltop village of Eygalières. Mas Aurelia provides a perfect get away where you can explore the provencal countryside and soak up the views and flavours of the local region">
     <meta name="keywords" content="rental, provence, house to rent, family home, south of france, countryside home" />
@@ -28,6 +28,7 @@
     <meta property="og:description" content="" />
     <meta property="og:image" content="" />
 
+    <link rel="icon" type="image/png" href="img/fav-house.png" />
     <link rel="stylesheet" href="css/app.css">
 
   </head>
@@ -39,13 +40,15 @@
 
     <script src="js/app.js"></script>
 
-    <!-- <script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='//www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-    </script> -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-101426998-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
