Fixed routing issue on live. However has hashbang in there and so should look at partrials option for pages.

--- a/source/js/module/nav/nav.html
+++ b/source/js/module/nav/nav.html
@@ -5,7 +5,7 @@
 -->
 
 	<div class="nav">
-		<div class="burger" on-click="burger">
+		<div class="burger {{expanded ? 'activeBurger': ' '}}" on-click="burger">
 			<div class="burger--bar"></div>
 			<div class="burger--bar"></div>
 			<div class="burger--bar"></div>
